--- a/SnowmassStyle/CpF-E1/wgreport.tex
+++ b/SnowmassStyle/CpF-E1/wgreport.tex
@@ -1058,7 +1058,7 @@ public software registry.
 
 Lying at the interface between particle physics, cosmology, and
 astrophysics, the Cosmic Frontier addresses many fundamental questions
-in Physics today; from dark energy, to quantum gravity, to the
+in physics today; from dark energy, to quantum gravity, to the
 astrophysics of galaxy formation.  With a 1000-fold increase in data
 rates expected over the next decade from a diverse range of Cosmic
 Frontier experiments, computational resources and facilities will need
