Changed "storage needs" to "data volumes" in Cosmic Frontier section.

--- a/SnowmassStyle/Computing/conclusions.tex
+++ b/SnowmassStyle/Computing/conclusions.tex
@@ -32,7 +32,7 @@ expertise of the Energy Frontier experiments for the diverse Intensity
 Frontier experiments would significantly improve their ability to reconstruct
 and analyze data.
 
-{\bf Cosmic Frontier} experiments will greatly expand their storage needs
+{\bf Cosmic Frontier} experiments will greatly expand their data volumes needs
 with the start of new surveys and the development of new instruments.
 Current data sets are about 1 PB, and the total data set is expected to be
 about 50 PB in ten years. Beyond that, in 10--20 years data will be
