Don't recall what I changed.

--- a/SnowmassStyle/Computing/Computing-executiveSummary.tex
+++ b/SnowmassStyle/Computing/Computing-executiveSummary.tex
@@ -29,7 +29,7 @@ In contrast to the short lifetime of the hardware is a longer lifetime for the
 software that is developed for both experiment and theory.  Of course, the software
 is undergoing continual development and optimization.  Thus, our study group
 considered the hardware and software needs of particle physics for the next
-ten to twenty years, and recommends not a grand project to two, but a continuing
+ten to twenty years, and recommends not a grand project or two, but a continuing
 process of monitoring and supporting the hardware and software needs of the field
 in order to optimize the contribution of computing to scientific output.
 
