Small changes, like line numbers.

--- a/SnowmassStyle/driverFile.tex
+++ b/SnowmassStyle/driverFile.tex
@@ -19,7 +19,7 @@
 \setcounter{secnumdepth}{3}
 
 \begin{document}
-%%%\linenumbers
+\linenumbers
 
 \def\bibname{References}
 \bibliographystyle{plain}
